# fitness

./: .gitignore  LICENSE  main.py  pyproject.toml
app/: auth.py  crud.py  database.py  models.py  routes.py
static/: index.html  login.html  register.html  stats.html  workout_detail.html  workouts.html
static/css/: style.css
static/js/: auth.js  stats.js  workout_detail.js  workouts.js
